# funcy

./: Cargo.toml  README.md
src/: lib.rs  template_renderer.rs  tests.rs
